--- a/index.html
+++ b/index.html
@@ -253,7 +253,19 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="bx bxl-java" style="color: #358cfd;"></i>
+            <i class="bx bxl-netlify" style="color: #fcee30;"></i>
+            <h3>Netlify</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4">
+          <div class="icon-box">
+            <i  class="bi bi-triangle-fill" style="color: #fdfdfd;"></i>
+            <h3>Vercel</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4">
+          <div class="icon-box">
+            <i class="bx bxl-java" style="color: #d16dff;"></i>
             <h3>Java</h3>
           </div>
         </div>
