--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <div class="interests container">
 
       <div class="section-title">
-        <h2>Technical Skills</h2>
+        <h2>Tech Skills</h2>
       </div>
 
       <div class="row">
