--- a/index.html
+++ b/index.html
@@ -398,12 +398,12 @@
                   class="Portfolio Image"
                   alt=""
                 />
-                <div class="single-portfolio-overlay">
-                  <h2></h2>
-                  <h3>
-                    <a href=""><h3>Learn More About React</h3></a>
-                  </h3>
-                </div>
+                <!-- <div class="single-portfolio-overlay"> -->
+                  <!-- <h2></h2> -->
+                  <!-- <h3> -->
+                    <!-- <a href=""><h3>Learn More About React</h3></a> -->
+                  <!-- </h3> -->
+                <!-- </div> -->
               </a>
             </div>
           </div>
@@ -418,12 +418,12 @@
                   class="Portfolio Image"
                   alt=""
                 />
-                <div class="single-portfolio-overlay">
-                  <h2></h2>
-                  <h3>
-                    <a href=""><h3>Learn More About Redux</h3></a>
-                  </h3>
-                </div>
+                <!-- <div class="single-portfolio-overlay"> -->
+                  <!-- <h2></h2> -->
+                  <!-- <h3> -->
+                    <!-- <a href=""><h3>Learn More About Redux</h3></a> -->
+                  <!-- </h3> -->
+                <!-- </div> -->
               </a>
             </div>
           </div>
@@ -438,12 +438,12 @@
                   class="Portfolio Image"
                   alt=""
                 />
-                <div class="single-portfolio-overlay">
-                  <h2></h2>
-                  <h3>
-                    <a href=""><h3>Learn More About Nodejs</h3></a>
-                  </h3>
-                </div>
+                <!-- <div class="single-portfolio-overlay"> -->
+                  <!-- <h2></h2> -->
+                  <!-- <h3> -->
+                    <!-- <a href=""><h3>Learn More About Nodejs</h3></a> -->
+                  <!-- </h3> -->
+                <!-- </div> -->
               </a>
             </div>
           </div>
@@ -458,12 +458,12 @@
                   class="Portfolio Image"
                   alt=""
                 />
-                <div class="single-portfolio-overlay">
-                  <h2></h2>
-                  <h3>
-                    <a href=""><h3>Learn More About ExpressJS</h3></a>
-                  </h3>
-                </div>
+                <!-- <div class="single-portfolio-overlay"> -->
+                  <!-- <h2></h2> -->
+                  <!-- <h3> -->
+                    <!-- <a href=""><h3>Learn More About ExpressJS</h3></a> -->
+                  <!-- </h3> -->
+                <!-- </div> -->
               </a>
             </div>
           </div>
@@ -472,12 +472,12 @@
             <div class="single-portfolio">
               <a href="#popup-1">
                 <img src="tech/Next.js.png" class="Portfolio Image" alt="" />
-                <div class="single-portfolio-overlay">
-                  <h2></h2>
-                  <h3>
-                    <a href=""><h3>Learn More About Next JS</h3></a>
-                  </h3>
-                </div>
+                <!-- <div class="single-portfolio-overlay"> -->
+                  <!-- <h2></h2> -->
+                  <!-- <h3> -->
+                    <!-- <a href=""><h3>Learn More About Next JS</h3></a> -->
+                  <!-- </h3> -->
+                <!-- </div> -->
               </a>
             </div>
           </div>
@@ -492,12 +492,12 @@
                   class="Portfolio Image"
                   alt=""
                 />
-                <div class="single-portfolio-overlay">
-                  <h2></h2>
-                  <h3>
-                    <a href=""><h3>Learn More About JavaScript</h3></a>
-                  </h3>
-                </div>
+                <!-- <div class="single-portfolio-overlay"> -->
+                  <!-- <h2></h2> -->
+                  <!-- <h3> -->
+                    <!-- <a href=""><h3>Learn More About JavaScript</h3></a> -->
+                  <!-- </h3> -->
+                <!-- </div> -->
               </a>
             </div>
           </div>
@@ -510,12 +510,12 @@
                   class="Portfolio Image"
                   alt=""
                 />
-                <div class="single-portfolio-overlay">
-                  <h2></h2>
-                  <h3>
-                    <a href=""><h3>Learn More About jQuery</h3></a>
-                  </h3>
-                </div>
+                <!-- <div class="single-portfolio-overlay"> -->
+                  <!-- <h2></h2> -->
+                  <!-- <h3> -->
+                    <!-- <a href=""><h3>Learn More About jQuery</h3></a> -->
+                  <!-- </h3> -->
+                <!-- </div> -->
               </a>
             </div>
           </div>
@@ -528,12 +528,12 @@
                   class="Portfolio Image"
                   alt=""
                 />
-                <div class="single-portfolio-overlay">
-                  <h2></h2>
-                  <h3>
-                    <a href=""><h3>Learn More About HTML</h3></a>
-                  </h3>
-                </div>
+                <!-- <div class="single-portfolio-overlay"> -->
+                  <!-- <h2></h2> -->
+                  <!-- <h3> -->
+                    <!-- <a href=""><h3>Learn More About HTML</h3></a> -->
+                  <!-- </h3> -->
+                <!-- </div> -->
               </a>
             </div>
           </div>
@@ -546,12 +546,12 @@
                   class="Portfolio Image"
                   alt=""
                 />
-                <div class="single-portfolio-overlay">
-                  <h2></h2>
-                  <h3>
-                    <a href=""><h3>Learn More About CSS</h3></a>
-                  </h3>
-                </div>
+                <!-- <div class="single-portfolio-overlay"> -->
+                  <!-- <h2></h2> -->
+                  <!-- <h3> -->
+                    <!-- <a href=""><h3>Learn More About CSS</h3></a> -->
+                  <!-- </h3> -->
+                <!-- </div> -->
               </a>
             </div>
           </div>
@@ -564,12 +564,12 @@
                   class="Portfolio Image"
                   alt=""
                 />
-                <div class="single-portfolio-overlay">
-                  <h2></h2>
-                  <h3>
-                    <a href=""><h3>Learn More About Tailwind CSS</h3></a>
-                  </h3>
-                </div>
+                <!-- <div class="single-portfolio-overlay"> -->
+                  <!-- <h2></h2> -->
+                  <!-- <h3> -->
+                    <!-- <a href=""><h3>Learn More About Tailwind CSS</h3></a> -->
+                  <!-- </h3> -->
+                <!-- </div> -->
               </a>
             </div>
           </div>
@@ -582,12 +582,12 @@
                   class="Portfolio Image"
                   alt=""
                 />
-                <div class="single-portfolio-overlay">
-                  <h2></h2>
-                  <h3>
-                    <a href=""><h3>Learn More About Bootstrap</h3></a>
-                  </h3>
-                </div>
+                <!-- <div class="single-portfolio-overlay"> -->
+                  <!-- <h2></h2> -->
+                  <!-- <h3> -->
+                    <!-- <a href=""><h3>Learn More About Bootstrap</h3></a> -->
+                  <!-- </h3> -->
+                <!-- </div> -->
               </a>
             </div>
           </div>
@@ -600,12 +600,12 @@
                   class="Portfolio Image"
                   alt=""
                 />
-                <div class="single-portfolio-overlay">
-                  <h2></h2>
-                  <h3>
-                    <a href=""><h3>Learn More About ChakraUI</h3></a>
-                  </h3>
-                </div>
+                <!-- <div class="single-portfolio-overlay"> -->
+                  <!-- <h2></h2> -->
+                  <!-- <h3> -->
+                    <!-- <a href=""><h3>Learn More About ChakraUI</h3></a> -->
+                  <!-- </h3> -->
+                <!-- </div> -->
               </a>
             </div>
           </div>
@@ -618,12 +618,12 @@
                   class="Portfolio Image"
                   alt=""
                 />
-                <div class="single-portfolio-overlay">
-                  <h2></h2>
-                  <h3>
-                    <a href=""><h3>Learn More About Git</h3></a>
-                  </h3>
-                </div>
+                <!-- <div class="single-portfolio-overlay"> -->
+                  <!-- <h2></h2> -->
+                  <!-- <h3> -->
+                    <!-- <a href=""><h3>Learn More About Git</h3></a> -->
+                  <!-- </h3> -->
+                <!-- </div> -->
               </a>
             </div>
           </div>
@@ -636,12 +636,12 @@
                   class="Portfolio Image"
                   alt=""
                 />
-                <div class="single-portfolio-overlay">
-                  <h2></h2>
-                  <h3>
-                    <a href=""><h3>Learn More About MongoDB</h3></a>
-                  </h3>
-                </div>
+                <!-- <div class="single-portfolio-overlay"> -->
+                  <!-- <h2></h2> -->
+                  <!-- <h3> -->
+                    <!-- <a href=""><h3>Learn More About MongoDB</h3></a> -->
+                  <!-- </h3> -->
+                <!-- </div> -->
               </a>
             </div>
           </div>
@@ -654,12 +654,12 @@
                   class="Portfolio Image"
                   alt=""
                 />
-                <div class="single-portfolio-overlay">
-                  <h2></h2>
-                  <h3>
-                    <a href=""><h3>Learn More About Netlify</h3></a>
-                  </h3>
-                </div>
+                <!-- <div class="single-portfolio-overlay"> -->
+                  <!-- <h2></h2> -->
+                  <!-- <h3> -->
+                    <!-- <a href=""><h3>Learn More About Netlify</h3></a> -->
+                  <!-- </h3> -->
+                <!-- </div> -->
               </a>
             </div>
           </div>
@@ -668,12 +668,12 @@
             <div class="single-portfolio">
               <a href="#popup-1">
                 <img src="tech/vercel.jpg" class="Portfolio Image" alt="" />
-                <div class="single-portfolio-overlay">
-                  <h2></h2>
-                  <h3>
-                    <a href=""><h3>Learn More About Vercel</h3></a>
-                  </h3>
-                </div>
+                <!-- <div class="single-portfolio-overlay"> -->
+                  <!-- <h2></h2> -->
+                  <!-- <h3> -->
+                    <!-- <a href=""><h3>Learn More About Vercel</h3></a> -->
+                  <!-- </h3> -->
+                <!-- </div> -->
               </a>
             </div>
           </div>
@@ -686,12 +686,12 @@
                   class="Portfolio Image"
                   alt=""
                 />
-                <div class="single-portfolio-overlay">
-                  <h2></h2>
-                  <h3>
-                    <a href=""><h3>Learn More About Java</h3></a>
-                  </h3>
-                </div>
+                <!-- <div class="single-portfolio-overlay"> -->
+                  <!-- <h2></h2> -->
+                  <!-- <h3> -->
+                    <!-- <a href=""><h3>Learn More About Java</h3></a> -->
+                  <!-- </h3> -->
+                <!-- </div> -->
               </a>
             </div>
           </div>
@@ -700,12 +700,12 @@
             <div class="single-portfolio">
               <a href="#popup-1">
                 <img src="tech/algo.png" class="Portfolio Image" alt="" />
-                <div class="single-portfolio-overlay">
-                  <h2></h2>
-                  <h3>
-                    <a href=""><h3>Learn More About DSA</h3></a>
-                  </h3>
-                </div>
+                <!-- <div class="single-portfolio-overlay"> -->
+                  <!-- <h2></h2> -->
+                  <!-- <h3> -->
+                    <!-- <a href=""><h3>Learn More About DSA</h3></a> -->
+                  <!-- </h3> -->
+                <!-- </div> -->
               </a>
             </div>
           </div>
