--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
           <!-- Single Portfolio starts -->
           <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box frontEnd">
             <div class="single-portfolio">
-              <a href="#popup-1">
+              <a href="#popup-1" class="d-flex justify-content-center">
                 <img
                   src="tech/icons8-react-400.png"
                   class="Portfolio Image"
@@ -412,7 +412,7 @@
           <!-- Single Portfolio starts -->
           <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box frontEnd">
             <div class="single-portfolio">
-              <a href="#popup-1">
+              <a href="#popup-1" class="d-flex justify-content-center">
                 <img
                   src="tech/icons8-redux-400.png"
                   class="Portfolio Image"
@@ -432,7 +432,7 @@
           <!-- Single Portfolio starts -->
           <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box backEnd">
             <div class="single-portfolio">
-              <a href="#popup-1">
+              <a href="#popup-1" class="d-flex justify-content-center">
                 <img
                   src="tech/icons8-nodejs-400.png"
                   class="Portfolio Image"
@@ -452,7 +452,7 @@
           <!-- Single Portfolio starts -->
           <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box backEnd">
             <div class="single-portfolio">
-              <a href="#popup-1">
+              <a href="#popup-1" class="d-flex justify-content-center">
                 <img
                   src="tech/icons8-express-js-400.png"
                   class="Portfolio Image"
@@ -470,7 +470,7 @@
           <!-- Single Portfolio Ends -->
           <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box frontEnd">
             <div class="single-portfolio">
-              <a href="#popup-1">
+              <a href="#popup-1" class="d-flex justify-content-center">
                 <img src="tech/Next.js.png" class="Portfolio Image" alt="" />
                 <!-- <div class="single-portfolio-overlay"> -->
                   <!-- <h2></h2> -->
@@ -486,7 +486,7 @@
             class="col-md-3 col-sm-6 col-xs-12 portfolio-box frontEnd backEnd"
           >
             <div class="single-portfolio">
-              <a href="#popup-1">
+              <a href="#popup-1" class="d-flex justify-content-center">
                 <img
                   src="tech/icons8-javascript-400.png"
                   class="Portfolio Image"
@@ -504,7 +504,7 @@
           <!-- Single Portfolio Ends -->
           <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box frontEnd">
             <div class="single-portfolio">
-              <a href="#popup-1">
+              <a href="#popup-1" class="d-flex justify-content-center">
                 <img
                   src="tech/icons8-jquery-400.png"
                   class="Portfolio Image"
@@ -522,7 +522,7 @@
           <!-- Single Portfolio Ends -->
           <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box frontEnd">
             <div class="single-portfolio">
-              <a href="#popup-1">
+              <a href="#popup-1" class="d-flex justify-content-center">
                 <img
                   src="tech/icons8-html-5-400.png"
                   class="Portfolio Image"
@@ -540,7 +540,7 @@
           <!-- Single Portfolio Ends -->
           <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box frontEnd">
             <div class="single-portfolio">
-              <a href="#popup-1">
+              <a href="#popup-1" class="d-flex justify-content-center">
                 <img
                   src="tech/icons8-css3-400.png"
                   class="Portfolio Image"
@@ -558,7 +558,7 @@
           <!-- Single Portfolio Ends -->
           <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box frontEnd">
             <div class="single-portfolio">
-              <a href="#popup-1">
+              <a href="#popup-1" class="d-flex justify-content-center">
                 <img
                   src="tech/icons8-tailwind-css-400.png"
                   class="Portfolio Image"
@@ -576,7 +576,7 @@
           <!-- Single Portfolio Ends -->
           <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box frontEnd">
             <div class="single-portfolio">
-              <a href="#popup-1">
+              <a href="#popup-1" class="d-flex justify-content-center">
                 <img
                   src="tech/icons8-bootstrap-400.png"
                   class="Portfolio Image"
@@ -594,7 +594,7 @@
           <!-- Single Portfolio Ends -->
           <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box frontEnd">
             <div class="single-portfolio">
-              <a href="#popup-1">
+              <a href="#popup-1" class="d-flex justify-content-center">
                 <img
                   src="tech/icons8-chakra-ui-400.png"
                   class="Portfolio Image"
@@ -612,7 +612,7 @@
           <!-- Single Portfolio Ends -->
           <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DataBase">
             <div class="single-portfolio">
-              <a href="#popup-1">
+              <a href="#popup-1" class="d-flex justify-content-center">
                 <img
                   src="tech/icons8-git-400.png"
                   class="Portfolio Image"
@@ -630,7 +630,7 @@
           <!-- Single Portfolio Ends -->
           <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DataBase">
             <div class="single-portfolio">
-              <a href="#popup-1">
+              <a href="#popup-1" class="d-flex justify-content-center">
                 <img
                   src="tech/icons8-mongodb-400.png"
                   class="Portfolio Image"
@@ -648,7 +648,7 @@
           <!-- Single Portfolio Ends -->
           <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DataBase">
             <div class="single-portfolio">
-              <a href="#popup-1">
+              <a href="#popup-1" class="d-flex justify-content-center">
                 <img
                   src="tech/logo_netlify.png"
                   class="Portfolio Image"
@@ -666,7 +666,7 @@
           <!-- Single Portfolio Ends -->
           <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DataBase">
             <div class="single-portfolio">
-              <a href="#popup-1">
+              <a href="#popup-1" class="d-flex justify-content-center">
                 <img src="tech/vercel.jpg" class="Portfolio Image" alt="" />
                 <!-- <div class="single-portfolio-overlay"> -->
                   <!-- <h2></h2> -->
@@ -680,7 +680,7 @@
           <!-- Single Portfolio Ends -->
           <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box backEnd">
             <div class="single-portfolio">
-              <a href="#popup-1">
+              <a href="#popup-1" class="d-flex justify-content-center">
                 <img
                   src="tech/icons8-java-400.png"
                   class="Portfolio Image"
@@ -698,7 +698,7 @@
           <!-- Single Portfolio Ends -->
           <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box">
             <div class="single-portfolio">
-              <a href="#popup-1">
+              <a href="#popup-1" class="d-flex justify-content-center">
                 <img src="tech/algo.png" class="Portfolio Image" alt="" />
                 <!-- <div class="single-portfolio-overlay"> -->
                   <!-- <h2></h2> -->
