--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <div class="col-lg-4">
             <!-- About image start -->
             <div class="" data-wow-delay="0.3s">
-              <img src="img/suraj.jpg.jpg" alt="" class="img-fluid" />
+              <img src="img/suraj.png" alt="" class="img-fluid" />
             </div>
             <!-- About image end -->
           </div>
