--- a/index.html
+++ b/index.html
@@ -823,8 +823,7 @@
                 <p>
                   This is my fully responsive personal portfolio website which I
                   made using HTML , CSS , JavaScript and Bootstrap 5 . It has
-                  many features like hamburger menu , changing navbar on
-                  switching to different route, animations, and many more.
+                  many features like hamburger menu , animations, and many more.
                 </p>
                 <p>
                   <span class="points">Individual Project </span>
