--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <span class="before-heading">Hi There! I'm </span>
                 <span class="cd-words-wrapper">
                   <b class="is-visible">Suraj Anand</b>
-                  <b>Full Stacak Web Developer</b>
+                  <b>Full Stack Web Developer</b>
                 </span>
               </h2>
               <h2>A Passionate Full Stack Developer.</h2>
