--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 
         <div class="row portfolio-boxes">
           <!-- Single Portfolio starts -->
-          <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box frontEnd">
+          <div class="col-md-3 col-sm-6 col-6 portfolio-box frontEnd">
             <div class="single-portfolio">
               <a href="#popup-1" class="d-flex justify-content-center">
                 <img
@@ -410,7 +410,7 @@
           <!-- Single Portfolio Ends -->
 
           <!-- Single Portfolio starts -->
-          <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box frontEnd">
+          <div class="col-md-3 col-sm-6 col-6 portfolio-box frontEnd">
             <div class="single-portfolio">
               <a href="#popup-1" class="d-flex justify-content-center">
                 <img
@@ -430,7 +430,7 @@
           <!-- Single Portfolio Ends -->
 
           <!-- Single Portfolio starts -->
-          <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box backEnd">
+          <div class="col-md-3 col-sm-6 col-6 portfolio-box backEnd">
             <div class="single-portfolio">
               <a href="#popup-1" class="d-flex justify-content-center">
                 <img
@@ -450,7 +450,7 @@
           <!-- Single Portfolio Ends -->
 
           <!-- Single Portfolio starts -->
-          <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box backEnd">
+          <div class="col-md-3 col-sm-6 col-6 portfolio-box backEnd">
             <div class="single-portfolio">
               <a href="#popup-1" class="d-flex justify-content-center">
                 <img
@@ -468,7 +468,7 @@
             </div>
           </div>
           <!-- Single Portfolio Ends -->
-          <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box frontEnd">
+          <div class="col-md-3 col-sm-6 col-6 portfolio-box frontEnd">
             <div class="single-portfolio">
               <a href="#popup-1" class="d-flex justify-content-center">
                 <img src="tech/Next.js.png" class="Portfolio Image" alt="" />
@@ -483,7 +483,7 @@
           </div>
           <!-- Single Portfolio Ends -->
           <div
-            class="col-md-3 col-sm-6 col-xs-12 portfolio-box frontEnd backEnd"
+            class="col-md-3 col-sm-6 col-6 portfolio-box frontEnd backEnd"
           >
             <div class="single-portfolio">
               <a href="#popup-1" class="d-flex justify-content-center">
@@ -502,7 +502,7 @@
             </div>
           </div>
           <!-- Single Portfolio Ends -->
-          <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box frontEnd">
+          <div class="col-md-3 col-sm-6 col-6 portfolio-box frontEnd">
             <div class="single-portfolio">
               <a href="#popup-1" class="d-flex justify-content-center">
                 <img
@@ -520,7 +520,7 @@
             </div>
           </div>
           <!-- Single Portfolio Ends -->
-          <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box frontEnd">
+          <div class="col-md-3 col-sm-6 col-6 portfolio-box frontEnd">
             <div class="single-portfolio">
               <a href="#popup-1" class="d-flex justify-content-center">
                 <img
@@ -538,7 +538,7 @@
             </div>
           </div>
           <!-- Single Portfolio Ends -->
-          <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box frontEnd">
+          <div class="col-md-3 col-sm-6 col-6 portfolio-box frontEnd">
             <div class="single-portfolio">
               <a href="#popup-1" class="d-flex justify-content-center">
                 <img
@@ -556,7 +556,7 @@
             </div>
           </div>
           <!-- Single Portfolio Ends -->
-          <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box frontEnd">
+          <div class="col-md-3 col-sm-6 col-6 portfolio-box frontEnd">
             <div class="single-portfolio">
               <a href="#popup-1" class="d-flex justify-content-center">
                 <img
@@ -574,7 +574,7 @@
             </div>
           </div>
           <!-- Single Portfolio Ends -->
-          <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box frontEnd">
+          <div class="col-md-3 col-sm-6 col-6 portfolio-box frontEnd">
             <div class="single-portfolio">
               <a href="#popup-1" class="d-flex justify-content-center">
                 <img
@@ -592,7 +592,7 @@
             </div>
           </div>
           <!-- Single Portfolio Ends -->
-          <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box frontEnd">
+          <div class="col-md-3 col-sm-6 col-6 portfolio-box frontEnd">
             <div class="single-portfolio">
               <a href="#popup-1" class="d-flex justify-content-center">
                 <img
@@ -610,7 +610,7 @@
             </div>
           </div>
           <!-- Single Portfolio Ends -->
-          <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DataBase">
+          <div class="col-md-3 col-sm-6 col-6 portfolio-box DataBase">
             <div class="single-portfolio">
               <a href="#popup-1" class="d-flex justify-content-center">
                 <img
@@ -628,7 +628,7 @@
             </div>
           </div>
           <!-- Single Portfolio Ends -->
-          <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DataBase">
+          <div class="col-md-3 col-sm-6 col-6 portfolio-box DataBase">
             <div class="single-portfolio">
               <a href="#popup-1" class="d-flex justify-content-center">
                 <img
@@ -646,7 +646,7 @@
             </div>
           </div>
           <!-- Single Portfolio Ends -->
-          <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DataBase">
+          <div class="col-md-3 col-sm-6 col-6 portfolio-box DataBase">
             <div class="single-portfolio">
               <a href="#popup-1" class="d-flex justify-content-center">
                 <img
@@ -664,7 +664,7 @@
             </div>
           </div>
           <!-- Single Portfolio Ends -->
-          <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DataBase">
+          <div class="col-md-3 col-sm-6 col-6 portfolio-box DataBase">
             <div class="single-portfolio">
               <a href="#popup-1" class="d-flex justify-content-center">
                 <img src="tech/vercel.jpg" class="Portfolio Image" alt="" />
@@ -678,7 +678,7 @@
             </div>
           </div>
           <!-- Single Portfolio Ends -->
-          <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box backEnd">
+          <div class="col-md-3 col-sm-6 col-6 portfolio-box backEnd">
             <div class="single-portfolio">
               <a href="#popup-1" class="d-flex justify-content-center">
                 <img
@@ -696,7 +696,7 @@
             </div>
           </div>
           <!-- Single Portfolio Ends -->
-          <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box">
+          <div class="col-md-3 col-sm-6 col-6 portfolio-box">
             <div class="single-portfolio">
               <a href="#popup-1" class="d-flex justify-content-center">
                 <img src="tech/algo.png" class="Portfolio Image" alt="" />
@@ -780,7 +780,7 @@
                 <p><span class="points">Duration: </span>Completed in 4 Days</p>
                 <p>
                   <span class="points">TECH STACK: </span>React , Redux , Chakra
-                  UI , Framer-Motion , Rapid-API , FireBase
+                  UI , Framer-Motion , Rapid-API , MongoDB, ExpressJS, Mongoose, NodeJS
                 </p>
               </div>
 
