--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@
               <div class="blog-body" id="blog-body">
                 <h2>Spotify</h2>
                 <p>
-                  Spotify is a digital music streaming service. It gives you
+                  Full Stack Spotify-clone.Spotify is a digital music streaming service. It gives you
                   instant access to its vast online library of music and
                   podcasts, allowing you to listen to any content of your choice
                   at any time. It is both legal and easy to use.
