--- a/index.html
+++ b/index.html
@@ -746,6 +746,63 @@
         </div>
 
         <div class="row">
+
+<!-- ================================ -->
+
+
+          <div class="col-lg-4 col-md-6 col-12">
+            <!-- Blog Single Start -->
+            <div class="blog-single mt-3 wow fadeInUp" data-wow-delay="0.3s">
+              <div class="blog-header">
+                <figure>
+                  <img
+                    src="img/portfolio/kinesis_AI.png"
+                    alt=""
+                  />
+                </figure>
+
+                <div class="blog-header-overlay">
+                  <a
+                    target="_blank"
+                    href="https://kinesis-ai.vercel.app"
+                    ><i class="fa fa-link"></i
+                  ></a>
+                </div>
+              </div>
+
+              <div class="blog-body" id="blog-body">
+                <h2>Kinesis.AI</h2>
+                <p>
+                  A full stack MERN AI image generation app with modern and minimal design, dynamic image layout and hover effect
+                   that showcases the users prompt to generate each AI images, their name and the download functionality, search functionality,
+                   credit system, login & signup, google auth, dark mode, the ability to create new AI generated images by any text.
+                </p>
+                <p>
+                  <span class="points">Individual Project </span>
+                </p>
+                <p><span class="points">Duration: </span>Completed in 3 Days</p>
+                <p>
+                  <span class="points">TECH STACK: </span>React , Redux , Chakra
+                  UI , Framer-Motion , OpenAI-API, React-Query , MongoDB, ExpressJS, Mongoose, NodeJS
+                </p>
+              </div>
+
+              <div class="blog-footer d-flex justify-content-center">
+                <a
+                  href="https://github.com/SurajAnand88/Kinesis.AI"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><button type="button" class="btn btn-dark fw-semibold">
+                    Github
+                  </button></a
+                >
+              </div>
+            </div>
+            <!-- Blog Single End -->
+          </div>
+<!-- ================================ -->
+
+
           <div class="col-lg-4 col-md-6 col-12">
             <!-- Blog Single Start -->
             <div class="blog-single mt-3 wow fadeInUp" data-wow-delay="0.3s">
@@ -798,6 +855,7 @@
             <!-- Blog Single End -->
           </div>
 
+          <!-- ====================== -->
           <div class="col-lg-4 col-md-6 col-12">
             <!-- Blog Single Start -->
             <div class="blog-single mt-3 wow fadeInUp" data-wow-delay="0.3s">
@@ -848,7 +906,7 @@
             </div>
             <!-- Blog Single End -->
           </div>
-
+<!-- ======================= -->
           <div class="col-lg-4 col-md-6 col-12">
             <!-- Blog Single Start -->
             <div class="blog-single mt-3 wow fadeInUp" data-wow-delay="0.3s">
@@ -898,7 +956,7 @@
             </div>
             <!-- Blog Single End -->
           </div>
-
+<!-- ==================================== -->
           <div class="col-lg-4 col-md-6 col-12">
             <!-- Blog Single Start -->
             <div class="blog-single mt-3 wow fadeInUp" data-wow-delay="0.3s">
