--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
                 <h2>Kinesis.AI</h2>
                 <p>
                   A full stack MERN AI image generation app with modern and minimal design, dynamic image layout and hover effect
-                   that showcases the users prompt to generate each AI images, their name and the download functionality, search functionality,
+                    the download and search functionality,
                    credit system, login & signup, google auth, dark mode, the ability to create new AI generated images by any text.
                 </p>
                 <p>
