--- a/index.html
+++ b/index.html
@@ -774,8 +774,7 @@
                 <h2>Kinesis.AI</h2>
                 <p>
                   A full stack MERN AI image generation app with modern and minimal design, dynamic image layout and hover effect
-                    the download and search functionality,
-                   credit system, login & signup, google auth, dark mode, the ability to create new AI generated images by any text.
+                    the download and search functionality, credit system, login & signup, google auth, dark mode, the ability to create new AI generated images by any text.
                 </p>
                 <p>
                   <span class="points">Individual Project </span>
@@ -826,10 +825,10 @@
               <div class="blog-body" id="blog-body">
                 <h2>Spotify</h2>
                 <p>
-                  Full Stack Spotify-clone.Spotify is a digital music streaming service. It gives you
+                  A Full Stack MERN Spotify-clone. Spotify is a digital music streaming service. It gives you
                   instant access to its vast online library of music and
-                  podcasts, allowing you to listen to any content of your choice
-                  at any time. It is both legal and easy to use.
+                  podcasts. We used most in demand technologies like React, Redux, ChakraUI, MongoDB, NodeJs, ExpressJS, Mongoose to make Spotify Clone.
+                   It has all the feaures that a online music platform should have.
                 </p>
                 <p>
                   <span class="points">Group Project: </span> Group of 4 Members
@@ -879,9 +878,9 @@
               <div class="blog-body" id="blog-body">
                 <h2>Portfolio</h2>
                 <p>
-                  This is my fully responsive personal portfolio website which I
-                  made using HTML , CSS , JavaScript and Bootstrap 5 . It has
-                  many features like hamburger menu , animations, and many more.
+                  I have created a personal portfolio website that is completely 
+                  responsive, utilizing a combination of HTML, CSS, JavaScript, and Bootstrap 5.
+                   The website boasts a wide range of features such as a hamburger menu, dynamic animations, and much more.
                 </p>
                 <p>
                   <span class="points">Individual Project </span>
