--- a/index.html
+++ b/index.html
@@ -825,9 +825,8 @@
               <div class="blog-body" id="blog-body">
                 <h2>Spotify</h2>
                 <p>
-                  A Full Stack MERN Spotify-clone. Spotify is a digital music streaming service. It gives you
-                  instant access to its vast online library of music and
-                  podcasts. We used most in demand technologies like React, Redux, ChakraUI, MongoDB, NodeJs, ExpressJS, Mongoose to make Spotify Clone.
+                  A Full Stack MERN Spotify-clone. It gives you
+                  instant access to its vast online library of music. We used most in demand technologies like React, Redux, ChakraUI, MongoDB, NodeJs, ExpressJS, Mongoose to make Spotify Clone.
                    It has all the feaures that a online music platform should have.
                 </p>
                 <p>
