--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@
                 <p><span class="points">Duration: </span>Completed in 3 Days</p>
                 <p>
                   <span class="points">TECH STACK: </span>React , Redux , Chakra
-                  UI , Framer-Motion , OpenAI-API, React-Query , MongoDB, ExpressJS, Mongoose, NodeJS
+                  UI , Cloudinary , OpenAI-API, React-Query , MongoDB, ExpressJS, Mongoose, NodeJS
                 </p>
               </div>
 
