--- a/index.html
+++ b/index.html
@@ -877,9 +877,9 @@
               <div class="blog-body" id="blog-body">
                 <h2>Portfolio</h2>
                 <p>
-                  I have created a personal portfolio website that is completely 
-                  responsive, utilizing a combination of HTML, CSS, JavaScript, and Bootstrap 5.
-                   The website boasts a wide range of features such as a hamburger menu, dynamic animations, and much more.
+                  I have developed a fully responsive personal portfolio website using a blend of HTML,
+                   CSS, JavaScript, and Bootstrap 5, integrating several advanced features such as hamburger menu, dynamic animations, and more.
+                   The website has a responsive layout, ensuring smooth and seamless user experience across various devices and screen sizes. 
                 </p>
                 <p>
                   <span class="points">Individual Project </span>
