--- a/index.html
+++ b/index.html
@@ -879,7 +879,7 @@
                 <p>
                   I have developed a fully responsive personal portfolio website using a blend of HTML,
                    CSS, JavaScript, and Bootstrap 5, integrating several advanced features such as hamburger menu, dynamic animations, and more.
-                   The website has a responsive layout, ensuring smooth and seamless user experience across various devices and screen sizes. 
+                   The website has a responsive layout, ensuring smooth and seamless user experience across various devices. 
                 </p>
                 <p>
                   <span class="points">Individual Project </span>
