--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               </h2>
               <h2>A Passionate Full Stack Developer.</h2>
 
-              <a href="/Suraj_Anand_Resume.pdf" class="btn-download" download
+              <a href="./Suraj_Anand_Resume.pdf" class="btn-download" download
                 >Resume <i class="fa-solid fa-download"></i
               ></a>
             </div>
